--- a/stripe_project/items/templates/items/item.html
+++ b/stripe_project/items/templates/items/item.html
@@ -14,6 +14,7 @@
                     <h1 class="name">{{ name }}</h1>
                     <p class="description">{{ description }}</p>
                     <p class="price">Цена: {{ price }} ₽</p>
+                    {% csrf_token %}
                     <button class="buy-button">Купить</button>
                 </div>
             </div>
